--- a/WebAppMVC_Diary/WebAppMVC_Diary/Views/Home/Add.cshtml
+++ b/WebAppMVC_Diary/WebAppMVC_Diary/Views/Home/Add.cshtml
@@ -22,7 +22,7 @@
             </div>
     </div>
             <br />
-            <label>지원동기</label>
+            <label>일기내용</label>
             <textarea asp-for="Content"
             rows="25" class="form-control">
                 </textarea>
