--- a/SmartFactory_MinProject/Views/Home/Delete.cshtml
+++ b/SmartFactory_MinProject/Views/Home/Delete.cshtml
@@ -6,10 +6,22 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Codeboard</h4>
-    <hr />
+
+
+    <div>
+        <div style="float:right">
+            <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> 
+            <a asp-action="Index" class="btn btn-outline-dark">Cancle</a>
+            </form>
+
+        </div>
+        <h4 class="float:left;">Are you sure you want to delete this?</h4>
+        <hr />
+    </div>
+
+    <div>
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
@@ -23,23 +35,48 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
+        <dt class="col-sm-2">
+            Date
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Date.ToString("yyyy-MM-dd")
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Contents)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Contents)
+        <dd class="col-sm-10">
+            <pre id="content">
+                @Html.Raw(Model.Contents)
+            </pre>
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Date)
-        </dd>
+        
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+   
 </div>
+<div class=topBtn onclick="window.scrollTo(0,0);" style="float:right;">TOP</div>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/default.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
+
+
+<script>
+
+    // 코드 언어 자동 감지
+    document.addEventListener("DOMContentLoaded", function () {
+        var contents = document.querySelectorAll("#content code");
+        contents.forEach(function (block) {
+            hljs.highlightBlock(block);
+        });
+    });
+
+    // 다크/라이트 모드 토글 함수
+    function toggleDarkMode() {
+        var contents = $("code[id*='codeBlock']");
+        contents.toggleClass("dark");
+        contents.children().toggleClass("dark");
+    }
+
+
+</script>
+
