--- a/SmartFactory_MinProject/Views/Home/Edit.cshtml
+++ b/SmartFactory_MinProject/Views/Home/Edit.cshtml
@@ -6,44 +6,66 @@
 
 <h1>Edit</h1>
 
-<h4>Codeboard</h4>
-<hr />
+
 <div class="row">
-    <div class="col-md-4">
+    <div>
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+
+            <div>
+                <div style="float:right">
+                    <input type="submit" value="Save" class="btn btn-outline-success" id="saveButton">
+                    <a href="javascript:history.back()" class="btn btn-outline-dark">Cancel</a>
+                </div>
+                <h4 class="float-left">Codeboard</h4>
+                <hr />
             </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+
+            <div class="form-group col-md-5" style="float: right;">
+                <div class="input-group">
+                    <input type="hidden" asp-for="Name" class="form-control" />
+                </div>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Contents" class="control-label"></label>
-                <input asp-for="Contents" class="form-control" />
+
+            <div class="form-group col-md-12">
+                <div class="input-group">
+                    <div class="input-group-text">&nbsp;&nbsp;&nbsp;Title&nbsp;&nbsp;&nbsp;</div>
+                    <input asp-for="Title" class="form-control" />
+                </div>
+                <span asp-validation-for="Title" class="text-danger"></span>
+            </div>
+
+            <br />
+
+            <div class="form-group col-md-12">
+                <div class="input-group">
+                    <div class="input-group-text">Contents</div>
+                    <textarea id="codeBoxes" rows="15" asp-for="Contents" class="form-control"></textarea>
+                </div>
                 <span asp-validation-for="Contents" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+
+            <br />
+            <button type="button" class="btn btn-outline-primary" onclick="addCodeBox()">Add Code Box</button>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+<script>
+    var codeBoxCount = 1;
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    function addCodeBox() {
+        var codeBoxes = document.getElementById("codeBoxes");
+
+        var codeBoxHtml = `<pre><code id="codeBlock${codeBoxCount}">\n내용을 여기에 입력하세요\n</code></pre>\n`;
+
+        codeBoxes.value += codeBoxHtml;
+
+        var codeBlock = document.getElementById(`codeBlock${codeBoxCount}`);
+        hljs.highlightBlock(codeBlock);
+
+        codeBoxCount++;
+    }
+</script>
